# sdgft-machine-learning

./: .gitignore  .zenodo.json  CITATION.cff  README.md  pyproject.toml
notebooks/: train_and_explore.ipynb
notebooks/runs/inverter/: best_inverter.pt
notebooks/runs/surrogate_v3/: best_model.pt
src/sdgft_ml/: __init__.py
src/sdgft_ml/api/: __init__.py  predict.py  visualize.py
src/sdgft_ml/data/: __init__.py  registry_export.py
src/sdgft_ml/loop/: __init__.py  active_learner.py  anomaly_detector.py  distillation.py
src/sdgft_ml/models/: __init__.py  curve_net.py  inverter.py  surrogate_gnn.py
src/sdgft_ml/training/: __init__.py  evaluate.py  round_trip.py  sensitivity.py  train_ensemble.py  train_inverter.py  train_surrogate.py  validate_real.py
tests/: test_data.py  test_models.py  test_training.py
