[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdgft-ml"
version = "0.1.0"
description = "ML surrogate, inverter & anomaly detector for Six-Dimensional Geometric Field Theory"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "David A. Besemer" }]
keywords = [
    "theoretical physics",
    "machine learning",
    "graph neural networks",
    "surrogate model",
    "cosmology",
    "particle physics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/cosmologicmind/sdgft-machine-learning"
Repository = "https://github.com/cosmologicmind/sdgft-machine-learning"
Issues = "https://github.com/cosmologicmind/sdgft-machine-learning/issues"

dependencies = [
    "torch>=2.1",
    "torch-geometric>=2.4",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]
wandb = ["wandb>=0.16"]
symbolic = ["pysr>=0.16"]
full = ["sdgft-ml[dev,wandb,symbolic]"]

[project.scripts]
sdgft-predict = "sdgft_ml.api.predict:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sdgft_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 88
